test/Fail/TypeBasedTermination/BadInductiveSizePreservation.err
TypeBasedTermination/BadInductiveSizePreservation.agda:13.1-15.37: error: [TerminationIssue]
Termination checking failed for the following functions:
  foo
Problematic calls:
  foo (add n (suc zero))
    (at TypeBasedTermination/BadInductiveSizePreservation.agda:15.15-18)
